# webserv

./: .gitignore  CMakeLists.txt  Makefile  README.md  default.conf  erase_all_logs.sh  example.conf  index.html  server.cpp  test.cpp  webserv
app/: CMakeLists.txt  main.cpp
backup/: request_message copy.cpp  request_message copy.hpp  request_parser copy.cpp
conf/: default.conf  example.conf  sample.conf  test1.conf  tester.conf
docs/: index.html
docs/cgi-bin/: get.php  get_result.php  hello.php  post.php  post_result.html  post_result.php  upload.html  upload.php
docs/error/: 4xx.html  5xx.html
ex/: request-msg
html/cgi-bin/: gugu.php
includes/: Client.hpp  Kqueue.hpp  Server.hpp  Socket.hpp  client_socket.hpp  config_parser.hpp  get.hpp  http_exception.hpp  kqueue.hpp  kqueue_handler.hpp  location.hpp  message.hpp  post_method.hpp  request_chunked_message.hpp  request_exception.hpp  request_message.hpp  request_parser.hpp  response_message.hpp  server.hpp  server_socket.hpp  socket.hpp  status_code.hpp  uri.hpp  webserv.hpp
includes/character_const/: character_color.hpp  character_const.hpp
includes/config/: allow_methods.hpp  config_parser.hpp  config_utils.hpp  error_pages.hpp  index.hpp  location.hpp  location_info.hpp  server.hpp  server_info.hpp
includes/const/: html.hpp
includes/core/: auto_index.hpp  cgi_handler.hpp  cgi_parser.hpp  client_socket.hpp  event_executor.hpp  event_handler.hpp  fd_handler.h  fd_handler.hpp  kqueue_handler.hpp  logger.hpp  resolve_uri.h  resolve_uri.hpp  server_socket.hpp  socket.hpp  udata.h  udata.hpp  webserv.hpp
includes/exception/: core_exception.h  core_exception.hpp  handle_event_exception.h  http_exception.hpp
includes/message/: body.hpp  header.hpp  http_version.hpp  response_message.hpp  status_line.hpp
includes/request/: request_chunked_message.hpp  request_header.hpp  request_message.hpp  request_parser.hpp  request_parsing_state.hpp  request_validation.h  request_validation.hpp  uri.hpp
includes/response/: cgi_handler.hpp  cgi_parser.hpp  date.h  date.hpp  delete_method.hpp  get_method.hpp  header.h  header.hpp  http_version.h  http_version.hpp  post_method.hpp  response_message.hpp  status_code.hpp  status_line.h  status_line.hpp
includes/util/: file_util.hpp  kevent_util.hpp  util.hpp
sources/: CMakeLists.txt  Kqueue.cpp  Socket.cpp  cgi_handler.cpp  client_socket.cpp  config_parser.cpp  date.cpp  delete_method.cpp  exception.cpp  get.cpp  get_method.cpp  http_exception.cpp  kqueue.cpp  kqueue_handler.cpp  location.cpp  main.cpp  message.cpp  post_method.cpp  request_chunked_message.cpp  request_message.cpp  request_parser.cpp  response_message.cpp  server.cpp  server_socket.cpp  socket.cpp  uri.cpp  webserv.cpp
sources/config/: allow_methods.cpp  config_parser.cpp  config_utils.cpp  error_pages.cpp  index.cpp  location.cpp  location_info.cpp  server.cpp  server_info.cpp
sources/core/: auto_index.cpp  cgi_handler.cpp  cgi_parser.cpp  client_socket.cpp  event_executor.cpp  event_handler.cpp  fd_handler.cpp  kqueue_handler.cpp  logger.cpp  resolve_uri.cpp  server_socket.cpp  socket.cpp  udata.cpp  webserv.cpp
sources/exception/: http_exception.cpp
sources/message/: body.cpp  header.cpp  http_version.cpp  response_message.cpp  status_line.cpp
sources/request/: request_chunked_message.cpp  request_chunked_parser.cpp  request_message.cpp  request_message_getter_setter.cpp  request_parser.cpp  request_parser_checker.cpp  request_paser_checker.cpp  request_validation.cpp
sources/response/: cgi_handler.cpp  cgi_parser.cpp  date.cpp  get_method.cpp  header.cpp  http_version.cpp  make_autoindex_html.cpp  post_method.cpp  response_message.cpp  status_line.cpp
sources/util/: file_util.cpp  kevent_util.cpp  util.cpp
test/: CMakeLists.txt  delete_method_test.cpp  get_method_test.cpp  get_test.cpp  header_test.cpp  http_version_test.cpp  kqueue_handler_test.cpp  main.cpp  post_method_test.cpp  request_parsing.cpp  response_event_test.cpp  response_message_test.cpp  sample_client.cpp  server_socket_test.cpp  socket_test.cpp  status_line_test.cpp
test/config/: allow_method_test.cpp  config_utils_method_test.cpp
test/core/: kqueue_file_read.cpp  kqueue_handler_test.cpp  server_socket_test.cpp  socket_addr.cpp
test/docs/error/: error.html
test/http_method/: get_method_test.cpp  post_method_test.cpp
test/response/: build_response_test.cpp  header_test.cpp  send_response_test.cpp  status_line_test.cpp
test/uri/: resolve_uri_test.cpp
test/uri/conf/: example.conf
test/uri/test_cases/e_no_permit_first_one/: index2.html
test/uri/test_cases/s_index_test_all_exist/: index.html
